--- a/style.css
+++ b/style.css
@@ -1,17 +1,72 @@
 body{
-    background-color:rgb(233, 233, 230);
+    background-color: rgb(198 198 137);
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
 }
+h1{
+    text-align:center;
+}
+.content{
+    display:flex;
+    justify-content: center;
+    align-items: c;
+}
+.content > *{
+    margin: 30px 40px;
+}
+.h1{
+    display:block;
+}
+.canvas-section > *{
+    padding: 10px;
+}
+label{
+    text-align:center;
+}
+.options{
+    width: 150px;
+    align-items:center;
+    flex-shrink:1;
+    width: f;
+}
+.options > *{
+    width:inherit;
+    margin:10px 0 10px;
+    padding:10px;
+}
+#color-picker,
+.canvas-section > * {
+    text-align:center;
+}
+button{
+    box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+    transition: all 0.3s ease 0s;
+    cursor: pointer;
+    outline: none;
+    border-radius: 1;
+}
+button:hover{
+    box-shadow: 0px 15px 20px rgba(50, 51, 51, 0.4);
+    color: black;
+    transform: translateY(-7px);
+}
+button:focus{
+    background-color:black;
+    color:white;
+}
+
 .grid-container{
     min-width:0;
     display:flex;
     flex-wrap: wrap;
-    margin:0 auto;
-    width:400px;
-    height:400px;
-    border:1px solid black;
+    flex-shrink: 0;
+    width:500px;
+    height:500px;
+    border:1px dotted black;
     background:white;
-    align-content: flex-start;
+    align-content: stretch;
     flex-direction: row;
+    justify-content: space-evenly;
 }
 .pixel{
     background-color: white;
